# Altron-Core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  response_data.json  ruff.toml
docs/: objects.md
src/: entry.py
src/altron_core/cli/: main.py
src/altron_core/clients/cli/: client.py
src/altron_core/core/: agent.py  inference.py  threads.py  tooling.py  tools.py
src/altron_core/core2/: agent.py  context.py  dtypes.py  inference.py  io.py  tooling.py  tron.py
src/altron_core/core3/: agent.py  client.py  dtypes.py  inference.py  server.py  threads.py
src/altron_core/networking/: __init__.py  inference.py  lmstudio.py
src/altron_core/server/: README.md  __init__.py  discord.py  general.py  server.py  subprocess.py
src/altron_core/threads/: 1.json
src/altron_core/types/: __init__.py  chunks.py  dtypes.py  message.py  stream.py  streams.py  tools.py
src/models/: __init__.py  _utils.py  message.py  thread.py
src/storage/: database.py  threads.py
src/utils/: exceptions.py
tests/: test__utils.py  test_tool_decorator.py
