[project]
name = "altron-core"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["mypy>=1.17.1", "pytest>=8.4.1", "pytest-cov>=6.2.1", "ruff>=0.12.8"]

[tool.uv]
package = true
